[package]
name = "also-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = { version = "0.15.4", default-features = false }
flume = "0.11.1"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0" }

[dev-dependencies]
serde_derive = "1.0"
criterion = "0.5"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"

[[bench]]
name = "local_bench"
harness = false
